--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon --exec ./node_modules/.bin/babel-node server.js"
+    "dev": "nodemon --exec ./node_modules/.bin/babel-node server.js",
+    "lint": "eslint --ext .js"
   },
   "dependencies": {
     "cors": "^2.8.5",
