--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon --exec ./node_modules/.bin/babel-node server.js",
+    "dev": "nodemon server.js",
     "lint": "eslint --ext .js"
   },
   "dependencies": {
@@ -13,9 +13,6 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/node": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
     "babel-register": "^6.26.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
