--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
     "babel-register": "^6.26.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
