--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@babel/preset-env": "^7.14.7",
     "babel-register": "^6.26.0",
     "eslint": "^7.29.0",
-    "nodemon": "^2.0.7"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.2"
   }
 }
