--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PORT=
-DB_HOST=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+PORT=5432
+DB_HOST= '127.0.0.1'
+DB_USERNAME='postgres'
+DB_PASSWORD='postgres'
+DB_NAME='amal_dev'
