--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
@@ -26,6 +27,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "nodemon": "^2.0.7",
-    "prettier": "2.3.2"  
+    "prettier": "2.3.2"
   }
 }
