--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "nodemon": "^2.0.7",
-    "prettier": "2.3.2"  
+    "prettier": "2.3.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
