--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint --ext .js",
-    "lint-all": "eslint --fix --ext .js,.jsx .",
-    "migrate": "sequelize-cli db:migrate",
-    "migrate:undo": "sequelize-cli db:migrate:undo",
-    "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-    "seed": "sequelize-cli db:seed:all",
-    "seed:undo": "sequelize-cli db:seed:undo:all"
-    
+    "lint-all": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "cors": "^2.8.5",
