--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
