--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   },
