--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   backend:
@@ -9,7 +9,7 @@ services:
     depends_on:
       - backend-db
     ports:
-      - "8080:8080"
+      - '8080:8080'
     environment:
       - PORT=8080
       - DB_HOST=backend-db
@@ -17,6 +17,7 @@ services:
       - DB_USERNAME=postgres
       - DB_NAME=postgres
       - DB_PASSWORD=1234
+      - JWT_KEY=secret
 
   backend-db:
     image: postgres:alpine
