JWT key был изменен

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - DB_USERNAME=postgres
       - DB_NAME=postgres
       - DB_PASSWORD=1234
-      - JWT_KEY=secret
+      - JWT_KEY=9U^t9Apv
 
   backend-db:
     image: postgres:alpine
