--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "nodemon": "^2.0.7",
     "prettier": "2.3.2",
     "sequelize-cli": "^6.2.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
