--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,7 +3,7 @@ require("@babel/register");
 const path = require("path");
 
 module.exports = {
-  "config": path.resolve('./src/config', 'database_config.js'),
+  "config": path.resolve('./src', 'config.js'),
   "models-path": path.resolve('./src/models'),
   "seeders-path": path.resolve('./src/database/seeders'),
   "migrations-path": path.resolve('./src/database/migrations')
