--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "joi": "^17.4.1",
     "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -31,8 +32,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "nodemon": "^2.0.7",
-    "prettier": "2.3.2",
-    "sequelize-cli": "^6.2.0"
+    "prettier": "2.3.2"
   },
   "engines": {
     "node": "16.x"
