--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
     "seed": "sequelize-cli db:seed:all",
-    "seed:undo": "sequelize-cli db:seed:undo:all"
+    "seed:undo": "sequelize-cli db:seed:undo:all",
+    "build": "npm run migrate"
   },
   "dependencies": {
     "cors": "^2.8.5",
