--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "npm run migrate"
   },
   "dependencies": {
+    "@babel/register": "^7.15.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.1",
