--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/* --exit",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint --ext .js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/register": "^7.15.3",
     "bcrypt": "^5.0.1",
+    "core-js": "^3.16.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.1",
@@ -37,8 +38,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
+    "mocha": "^9.1.1",
     "nodemon": "^2.0.7",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "supertest": "^6.1.6"
   },
   "engines": {
     "node": "16.x"
