--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
+    "pg-native": "^3.0.0",
+    "run": "^1.4.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
