--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,13 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
+        env: 
+          DATABASE_URL: postgres://postgres@postgres/postgres
+          JWT_SECRET_KEY: @=xc6j2F4-9^#_2VNG4fLwU:qshTFt8F
+          PORT: 8080
+
+    services:
+      postgres:
+        image: postgres:alpine
+        env:
+          POSTGRES_HOST_AUTH_METHOD: trust
