--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:alpine
+        image: postgres
         env:
           POSTGRES_HOST_AUTH_METHOD: trust
         options: >-
