--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,10 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports: 
+          - 5432:5432
 
     steps:
-      needs: postgres
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
