--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports: 
-          - 5432:5432
 
     steps:
       - uses: actions/checkout@v2
@@ -29,7 +27,7 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
         env: 
-          DATABASE_URL: postgres://postgres@postgres/postgres
+          DATABASE_URL: postgres://postgres@postgres:5432/postgres
           JWT_SECRET_KEY: '@=xc6j2F4-9^#_2VNG4fLwU:qshTFt8F'
           PORT: 8080
       - run: npm test
