--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
+      - run: npm docker-compose ps
       - run: npm run build --if-present
         env: 
           DATABASE_URL: postgres://postgres@postgres:5432/postgres
