--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,20 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_HOST_AUTH_METHOD: trust
+          POSTGRES_DB: test
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+    env: 
+      DATABASE_URL: postgres://postgres:postgres@0.0.0.0:5432/test
+      JWT_SECRET_KEY: '@=xc6j2F4-9^#_2VNG4fLwU:qshTFt8F'
+      PORT: 8080
 
     steps:
       - uses: actions/checkout@v2
@@ -25,12 +33,10 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-      - run: npm docker-compose ps
-      - run: npm run build --if-present
-        env: 
-          DATABASE_URL: postgres://postgres@postgres:5432/postgres
-          JWT_SECRET_KEY: '@=xc6j2F4-9^#_2VNG4fLwU:qshTFt8F'
-          PORT: 8080
+      - run: npm run migrate
+      # - run: npm docker-compose ps
+      # - run: npm run build --if-present
+
       - run: npm test
 
 
