--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           --health-retries 5
     env: 
       DATABASE_URL: postgres://postgres:postgres@0.0.0.0:5432/test
-      JWT_SECRET_KEY: '@=xc6j2F4-9^#_2VNG4fLwU:qshTFt8F'
+      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
       PORT: 8080
 
     steps:
